[package]
name = "extractor_p"
version = "0.1.0"
authors = ["Cahid"]
edition = "2021"
licence = "MIT"
description = "Extracts the photo from the given doc file"
repository = "https://github.com/LCahid/Extractor"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
