[package]
name = "extractor_p"
version = "0.1.0"
authors = ["Cahid"]
edition = "2021"
license = "MIT"
description = "Extracts the photo from the given doc file"
repository = "https://github.com/LCahid/Extractor"
readme = "README.md"
keywords = ["extractor", "photo", "doc", "docx", "docm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
